--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
       p{
         width: 50vw;
-        font-size: 4px;
+        padding:30px;
+        top: 20px;
+        font-size: 6px;
       }
     </style>
 </head>
