--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       p{
         width: 50vw;
         padding:30px;
-        top: 20px;
+        left: 100px;
+        top: 300px;
         font-size: 6px;
         position: absolute;
       }
