--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         padding:30px;
         left: 100px;
         top: 300px;
-        font-size: 5px;
+        font-family:'Times New Roman', Times, serif;
+        font-size: 4px;
         letter-spacing: 1px;
         position: absolute;
       }
