--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             overflow: hidden;
         }
 
-      p{
+      h1{
         width: 50vw;
         padding:30px;
         left: 100px;
@@ -26,12 +26,20 @@
         letter-spacing: 1px;
         position: absolute;
       }
+
+      p{
+        position: absolute;
+        top: 50px;
+        font-size: 4px;
+        
+      }
     </style>
 </head>
 <body>
-    <p> 
-        Adaptation to smallness involves embracing simplicity, efficiency, and the nuances of limited space. It requires a shift in perspective, valuing detail over grandiosity, and making the most of what is available. This could mean a streamlined approach to problem-solving, resourcefulness in utilizing minimal materials, or finding beauty and purpose in the compact and concise. Adapting to smallness often demands creativity and flexibility, turning perceived limitations into opportunities for innovation and thoughtful design.</p>
+    <h1> 
+        Adaptation to smallness involves embracing simplicity, efficiency, and the nuances of limited space. It requires a shift in perspective, valuing detail over grandiosity, and making the most of what is available. This could mean a streamlined approach to problem-solving, resourcefulness in utilizing minimal materials, or finding beauty and purpose in the compact and concise. Adapting to smallness often demands creativity and flexibility, turning perceived limitations into opportunities for innovation and thoughtful design.</h1>
 
+        <p>*</p>
     <script>
        document.addEventListener('gesturestart', function(e) {
     e.preventDefault();
