--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       h1{
         width: 50vw;
         padding:30px;
-        left: 100px;
+        left: 110px;
         top: 300px;
         font-family:'Times New Roman', Times, serif;
         font-size: 4px;
@@ -30,8 +30,10 @@
       p{
         position: absolute;
         top: 50px;
-        font-size: 4px;
-        
+        font-size: 9px;
+        font-family:'Times New Roman', Times, serif;
+
+
       }
     </style>
 </head>
