--- a/index.html
+++ b/index.html
@@ -29,12 +29,27 @@
 
       p{
         position: absolute;
-        top: 50px;
+        top: 150px;
         font-size: 9px;
+        left: 230px;
         font-family:'Times New Roman', Times, serif;
-
-
-      }
+        -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 
+    100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+    100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin { 
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
+}
+      
     </style>
 </head>
 <body>
