--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             height: 100%;
             overflow: hidden;
             position: relative;
+            background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(188,242,18,1) 100%);;
         }
 
         h1 {
