--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             overflow: hidden;
             position: relative;
             background: rgb(238,174,202);
-background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(188,242,18,1) 100%);;
+background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(188,242,18,0.3449754901960784) 100%);
         }
 
         h1 {
