--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(188,242,18,0.16
             padding: 30px;
             left: 110px;
             top: 300px;
-            font-family: 'Times New Roman', Times, serif;
+            font-family: Arial, Helvetica, sans-serif;
             font-size: 4px;
             letter-spacing: 1px;
             position: absolute;
