--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             overflow: hidden;
             position: relative;
             background: rgb(238,174,202);
-background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(188,242,18,0.16290266106442575) 100%);
-        h1 {
+background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(188,242,18,0.16290266106442575) 100%);}
+      
+
+    h1 {
             width: 50vw;
             padding: 30px;
             left: 110px;
