--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
             left: 110px;
             top: 300px;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 4px;
+            font-size:3px;
             letter-spacing: 1px;
             position: absolute;
+        }
+
+
+        .type3 {
+            width: 500px;
+            height: 500px;
+            left: 110px;
+            top: 300px;
+            border: 1px dotted rgb(0, 0, 0);
+            border-radius: 50%;
         }
 
         p {
@@ -63,6 +73,8 @@
     <p>°</p>
     <p>.</p>
     <p>♥</p>
+
+    <div class="circleBase type3"></div>
 
     <script>
         let count = 0; // Track the number of duplicates
