--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size:3px;
             letter-spacing: 1px;
+            z-index: 3;
             position: absolute;
         }
 
@@ -37,6 +38,8 @@
             top: 300px;
             border: 1px dotted rgb(0, 0, 0);
             border-radius: 50%;
+            z-index: 5;
+            position: absolute;
         }
 
         p {
