--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 300px;
             font-family: Arial, Helvetica, sans-serif;
             font-size:3px;
-            letter-spacing: 1px;
+            /* letter-spacing: 1px; */
             z-index: 3;
             position: absolute;
         }
