--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
         body, html {
             height: 100%;
             overflow: hidden;
-            position: relative;
-           }
-      
-
-    h1 {
-            width: 50vw;
-            padding: 30px;
-            left: 110px;
-            top: 300px;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size:3px;
-            /* letter-spacing: 1px; */
-            z-index: 3;
-            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+        }
+
+        h1 {
+            width: 50vw;
+            padding: 30px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 3px;
+            z-index: 3;
+            text-align: center;
+        }
 
         .type3 {
             width: 300px;
             height: 300px;
-            left: 80px;
-            top: 250px;
             border: 1px dotted rgb(0, 0, 0);
             border-radius: 50%;
             z-index: 5;
-            position: absolute;
+            margin-bottom: 20px;
         }
 
         p {
@@ -50,7 +52,7 @@
             -moz-animation: spin 4s linear infinite;
             animation: spin 4s linear infinite;
             opacity: 0;
-            transition: opacity 1s ease-in; 
+            transition: opacity 1s ease-in;
         }
 
         @-moz-keyframes spin { 
@@ -68,16 +70,17 @@
     </style>
 </head>
 <body>
-    <h1> 
-        Adaptation to smallness involves embracing simplicity, efficiency, and the nuances of limited space. It requires a shift in perspective, valuing detail over grandiosity, and making the most of what is available. This could mean a streamlined approach to problem-solving, resourcefulness in utilizing minimal materials, or finding beauty and purpose in the compact and concise. Adapting to smallness often demands creativity and flexibility, turning perceived limitations into opportunities for innovation and thoughtful design.
-    </h1>
+    <div class="container">
+        <div class="type3"></div>
+        <h1> 
+            Adaptation to smallness involves embracing simplicity, efficiency, and the nuances of limited space. It requires a shift in perspective, valuing detail over grandiosity, and making the most of what is available. This could mean a streamlined approach to problem-solving, resourcefulness in utilizing minimal materials, or finding beauty and purpose in the compact and concise. Adapting to smallness often demands creativity and flexibility, turning perceived limitations into opportunities for innovation and thoughtful design.
+        </h1>
+    </div>
 
     <p>*</p>
     <p>°</p>
     <p>.</p>
     <p>♥</p>
-
-    <div class="circleBase type3"></div>
 
     <script>
         let count = 0; // Track the number of duplicates
