--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=0, user-scalable=no" />
-    <title>ADD</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0, user-scalable=no" />
+    <title>SMOL WEBSITE</title>
     <style>
         * {
             margin: 0;
@@ -17,12 +17,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
         }
 
         .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
             position: relative;
         }
 
@@ -32,7 +30,12 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 3px;
             z-index: 3;
+            letter-spacing: 1px;
             text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .type3 {
@@ -40,8 +43,8 @@
             height: 300px;
             border: 1px dotted rgb(0, 0, 0);
             border-radius: 50%;
-            z-index: 5;
-            margin-bottom: 20px;
+            z-index: 1;
+            position: relative;
         }
 
         p {
