--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .type3 {
             width: 300px;
             height: 300px;
-            border: 1px dotted rgb(0, 0, 0);
+            border: 1px groove rgb(0, 0, 0);
             border-radius: 50%;
             z-index: 1;
             position: relative;
