--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             width: 50vw;
             padding: 30px;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 3px;
+            font-size: 4px;
             z-index: 3;
             letter-spacing: 1px;
           
@@ -70,9 +70,22 @@
                 transform: rotate(360deg); 
             } 
         }
+
+
+        marquee{
+            top:5px;
+            width:100vw;
+            font-size: 4px;
+            position: relative; 
+            z-index: 10;
+            font-family:'Times New Roman', Times, serif;
+            letter-spacing: 1px;
+
+        }
     </style>
 </head>
 <body>
+    <marquee> welcome to the small website</marquee>
     <div class="container">
         <div class="type3"></div>
         <h1> 
