--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             top:5px;
             width:100vw;
             font-size: 4px;
-            position: relative; 
+            position: absolute; 
             z-index: 10;
             font-family:'Times New Roman', Times, serif;
             letter-spacing: 1px;
