--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .type3 {
             width: 300px;
             height: 300px;
-            border: 1px groove rgb(0, 0, 0);
+            border: 1px dotted rgb(0, 0, 0);
             border-radius: 50%;
             z-index: 1;
             position: relative;
@@ -73,7 +73,7 @@
 
 
         marquee{
-            top:5px;
+            top:20px;
             width:100vw;
             font-size: 4px;
             position: absolute; 
@@ -85,7 +85,7 @@
     </style>
 </head>
 <body>
-    <marquee> welcome to the small website</marquee>
+    <marquee> .!▲♥°welcome to the small website°♥▲!.</marquee>
     <div class="container">
         <div class="type3"></div>
         <h1> 
