--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body>
-    <marquee> .!▲♥°welcome to the small website°♥▲!.</marquee>
+    <marquee> .!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!..!▲♥°welcome to the small website°♥▲!.</marquee>
     <div class="container">
         <div class="type3"></div>
         <h1> 
