--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            background-color:rgb(212, 255, 241);
         }
 
         .container {
